<resources>
    <string name="app_name">Word Of Mouth</string>
    <string name="action_settings">Settings</string>
    <string name="CreateNewListTextView">+ Create New List</string>
    <string name="title_activity_add_list">Create List</string>
    <string name="title_activity_items_of_alist_view">Items Of Selected List</string>
    <string name="AddItemTextView">+ Add Item</string>
    <string name="title_activity_add_item_view">Add Item</string>
    <string name="title_activity_item_view">ItemView</string>
    <string name="action_about">About</string>
    <string name="action_logout">Logout</string>
    <string name="action_feedback">Send Feedback</string>
    <string name="title_activity_login">Login</string>
    <string name="welcomeText">Welcome to Word of Mouth</string>
    <string name="LoginUsernameHint">Username</string>
    <string name="LoginPasswordHint">Password</string>
    <string name="LoginButtonText">Login</string>
    <string name="LoginNotMemberText">Not a member? Register!</string>
    <string name="title_activity_register">Register</string>
    <string name="RegisterNameHint">Name</string>
    <string name="RegisterEmailHint">E-mail</string>
    <string name="RegisterUsernameHint">Username</string>
    <string name="RegisterPasswordHint">Password</string>
    <string name="RegisterButtonText">Register</string>
    <string name="RegisterAlreadyRegisteredText">Already registered? Login!</string>
    <string name="title_activity_activity_invite">ActivityInvite</string>
    <string name="title_activity_activity_notifications">ActivityNotifications</string>
    <string name="google_app_id">260188412151</string>
    <string-array name="menu_items">
        <item>Home</item>
        <item>Notifications</item>
        <item>Feedback</item>
        <item>About</item>
        <item>Log out</item>
    </string-array>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="title_activity_activity_profile">ActivityProfile</string>
    <string name="title_activity_activity_about">ActivityAbout</string>
    <string name="title_activity_activity_feedback">ActivityFeedback</string>
    <string name="ForgotPasswordText">Forgot Password?</string>
    <string name="title_activity_activity_password_reset">ActivityPasswordReset</string>
</resources>
