<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_horizontal_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_login" tools:context="com.wordofmouth.Activities.ActivityLogin">

    <TextView
        android:layout_width="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="130dp"
        android:text = "@string/welcomeText"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="#FFF"
        android:layout_height="wrap_content" />

    <EditText
        android:id = "@+id/usernameField"
        android:layout_marginTop="40dp"
        android:hint="@string/LoginUsernameHint"
        android:textColor="#FFF"
        android:background="#d3d3d3"
        android:layout_width="match_parent"
        android:layout_height="40dp" />

    <EditText
        android:id = "@+id/passwordField"
        android:layout_marginTop="5dp"
        android:inputType="textPassword"
        android:hint="@string/LoginPasswordHint"
        android:textColor="#FFF"
        android:background="#d3d3d3"
        android:layout_width="match_parent"
        android:layout_height="40dp" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/LoginButtonText"
        />

    <TextView
        android:id = "@+id/registerNow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/LoginNotMemberText"
        android:textStyle="bold"
        android:textColor="#FFF" />

    <TextView
        android:id = "@+id/forgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/ForgotPasswordText"
        android:textStyle="bold"
        android:textColor="#FFF" />


</LinearLayout>
